--- a/packages/react-components/src/filter-list/base/inputs/CheckboxListSkeleton.module.css
+++ b/packages/react-components/src/filter-list/base/inputs/CheckboxListSkeleton.module.css
@@ -26,3 +26,7 @@
   gap: var(--osdk-filter-checkbox-label-gap);
   padding: var(--osdk-filter-checkbox-row-padding);
 }
+
+.flexBar {
+  flex: 1;
+}
